fixed content alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   /* background-color: black; */
-  color: antiquewhite;
+  color: white;
+  font-size: 24px;
   height: 100%;
   width: 100%;
-
 }
 
 #root {
